[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
workspace_root = "0.2.0"
xshell = "0.2.7"
qemu-command-builder = "11.0.0-1"
ovmf-prebuilt = "0.2.8"
fatfs = "0.3.6"
roxy-loader-utils = "0.1"
